# lore

./: .gitignore  AGENTS.md  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
lore-cli/: pyproject.toml
lore-cli/src/lore_cli/: main.py
lore-core/: pyproject.toml
lore-core/src/lore_core/: distill.py  models.py  store.py
lore-daemon/: pyproject.toml
lore-daemon/src/lore_daemon/: __main__.py  registry.py  server.py
lore-daemon/src/lore_daemon/hooks/: compact.py  pre_tool.py  prompt.py  stop.py  tool.py
tests/integration/: test_commit_flow.py
tests/unit/: test_cli.py  test_daemon.py  test_daemon_hooks.py  test_distill.py  test_store.py
