[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "lore-core",
]

[project.scripts]
lore = "lore_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_cli"]
